[tool.poetry]
name = "python-picpay"
version = "1.0.0"
description = ""
authors = ["Marcus Pereira <contato@spacedevs.com.br>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.22.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
