[tool.poetry]
name = "python-picpay"
version = "1.0.0"
description = ""
homepage = "https://github.com/MarcusMann/python-picpay"
repository = "https://github.com/MarcusMann/python-picpay"
license = "MIT"
keywords = ["picpay", "gateway de pagamento", "loja virtual", "ecommerce", "pagseguro"]
authors = ["Marcus Pereira <contato@spacedevs.com.br>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.22.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"
black = "^19.10b0"
snapshottest = "^0.5.1"
pytest-cov = "^2.8.1"
coveralls = "^1.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
